<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="components">Components</string>
    <string name="add_component">Add Component</string>
    <string name="enumeration_ending">and</string>
    <string name="go_shopping">Go Shopping</string>
    <string name="discrepancy_overview">Discrepancy Overview</string>
    <string name="planner">Dinner Planner</string>
    <string name="shopping_notification_channel_name">Shopping</string>
    <string name="shopping_notification_channel_description">Notifies you when you have to go shopping</string>
    <string name="additional_products">Additional Products</string>
    <string name="missing_products">Missing Products</string>
    <string name="cart_amount">Cart Amount</string>
    <string name="change_cart_amount_for_product">Change cart amount for product</string>
    <string name="add_additional_product">Add product</string>

    <!-- Facebook -->
    <string name="facebook_application_id" translatable="false">535190474056037</string>
    <string name="facebook_login_protocol_scheme" translatable="false">535190474056037</string>

    <string name="app_name">usedup</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="minimum_quantity">Minimum Quantity</string>
    <string name="maximum_quantity">Maximum Quantity</string>
    <string name="current_quantity">Current Quantity</string>
    <string name="capacity">Capacity</string>

    <string name="instructions">Instructions</string>
    <string name="description">Description</string>
    <string name="add_ingredients">Add Ingredients</string>
    <string name="duration">Duration (in minutes)</string>
    <string name="ingredients">Ingredients</string>

    <string name="category">Category</string>
    <string name="preferences">Preferences</string>
    <string name="register_with_email">Register with Email</string>
    <string name="register">Register</string>
    <string name="or">or</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_with_facebook">Register with Facebook</string>
    <string name="register_with_google">Register with Google</string>
    <string name="sign_in_with_email">Sign in with Email</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="logout">Logout</string>
    <string name="measure">Measure</string>
    <string name="quantity">Quantity</string>

    <string name="add_product">Add Product</string>
    <string name="update_product">Update Product</string>
    <string name="consumption">Consumption</string>
    <string name="products">Products</string>
    <string name="templates">Templates</string>
    <string name="meals">Meals</string>
    <string name="about">About</string>
    <string name="imprint">Imprint</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="confirm_cart">Confirm Cart</string>
    <string name="shopping">Shopping</string>
    <string name="management">Management</string>
    <string name="others">Others</string>
    <string name="no_discrepancy_message">You don\'t miss any products</string>
    <string name="no_meals_message">You don\'t have any meals planned</string>
    <string name="product_name">Name of the product</string>
    <string name="save_dinner">Save Dinner</string>
    <string name="no_products_yet_message">No Products available yet :(</string>
    <string name="no_templates_yet_message">No Templates available yet :(</string>
    <string name="no_meals_yet_message">You don\'t have any meals yet :(</string>
    <string name="product">Product</string>
    <string name="template">Template</string>
    <string name="meal">Meal</string>
    <string name="consume">Consume</string>
    <string name="register_consumptions">Register consumptions</string>
    <string name="add_meal">Add Meal</string>
    <string name="discrepancy_info">This is where you can see the products you are missing in your home, as well as the respective discrepancy.</string>
    <string name="consumption_info">Select if you consumed a product, template or meal, enter the according name and press consume to update your homes stock.</string>
    <string name="enter_product_name">Enter the products name</string>
    <string name="enter_template_name">Enter the templates name</string>
    <string name="enter_meal_name">Enter the meals name</string>
    <string name="users">Users</string>
    <string name="invite_user">Invite User</string>
    <string name="subscription">Subscription</string>
    <string name="payment_method">Payment Method</string>
    <string name="household">Household</string>
    <string name="more_discrepancy_message">And %1$d more...</string>
    <string name="about_label">About</string>
    <string name="overview_label">Overview</string>
    <string name="preview_label">Preview</string>
    <string name="management_label">Management</string>
    <string name="edit_meal_label">Edit Meal</string>
    <string name="edit_product_label">Edit Product</string>
    <string name="edit_template_label">Edit Template</string>
    <string name="preference_label">Preferences</string>
    <string name="planning_label">Meal Planning</string>
    <string name="meal_label">Meal</string>
    <string name="select_meal_label">Select Meal</string>
    <string name="shopping_list_label">Shopping-List</string>
    <string name="household_label">Household</string>
    <string name="discard">Discard</string>
    <string name="accept">Accept</string>
    <string name="display_info_summary">Whether or not you want the info boxes to show</string>
    <string name="display_info_title">Info Boxes</string>
    <string name="shopping_weekdays_dialog_title">Select Shopping Weekdays</string>
    <string name="shopping_weekdays_summary">Select the weekdays on which you go shopping</string>
    <string name="shopping_weekdays_title">Shopping Weekdays</string>
    <string name="dinner_time_summary">Select the time at which you usually eat for dinner</string>
    <string name="dinner_time_title">Dinner Time</string>
    <string name="account">Account</string>
    <string name="selected_shopping_days">%1$s selected</string>
    <string name="history">History</string>
    <string name="statistics">Statistics</string>
    <string name="read_more">Read more</string>
    <string name="coming_soon">Coming soon</string>
    <string name="current_quantity_message">Current quantity of %1$s is %2$s</string>
    <string name="no_internet_message">It seems like you don\'t have an internet connection. Changes you make will take no effect, while you are offline.</string>
    <string name="open_settings">Open Settings</string>
    <string name="admin">Admin</string>
    <string name="member">Member</string>
    <string name="permissions">Permissions</string>
    <string name="add_permissions">Add Permissions</string>
    <string name="remove_from_household">Remove from Household</string>
    <string name="enter_email_address">Enter Email address</string>
    <string name="change_household_warning">By changing your household you won\'t be able to access your current data anymore!</string>
    <string name="accept_invitation">Accept Invitation</string>
    <string name="decline_invitation">Decline Invitation</string>
    <string name="invitation_message">%1$s invited you to their household</string>
    <string name="save">Save</string>
</resources>