<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
                android:id="@+id/shopping_option"
                android:icon="@drawable/cart_icon"
                android:title="@string/shopping" />
        <item
                android:id="@+id/planner_option"
                android:icon="@drawable/calendar_icon"
                android:title="@string/planner" />
    </group>
    <item android:title="@string/household">
        <menu>
            <group>
                <item
                        android:id="@+id/household_option"
                        android:icon="@drawable/household_icon"
                        android:title="@string/household" />
                <item
                        android:id="@+id/management_option"
                        android:icon="@drawable/management_icon"
                        android:title="@string/management" />
                <item
                        android:id="@+id/statistics_option"
                        android:icon="@drawable/statistics_icon"
                        android:title="@string/statistics" />
                <item
                        android:id="@+id/history_option"
                        android:icon="@drawable/history_icon"
                        android:title="@string/history" />
            </group>
        </menu>
    </item>
    <item android:title="@string/others">
        <menu>
            <group>
                <item
                        android:id="@+id/account_option"
                        android:icon="@drawable/account_icon"
                        android:title="@string/account" />
                <item
                        android:id="@+id/preference_option"
                        android:icon="@drawable/settings_icon"
                        android:title="@string/preferences" />
                <item
                        android:id="@+id/about_option"
                        android:icon="@drawable/about_icon"
                        android:title="@string/about" />
            </group>
        </menu>
    </item>
</menu>