<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        app:startDestination="@id/overview_fragment">

    <fragment
            android:id="@+id/overview_fragment"
            android:name="de.usedup.android.overview.OverviewFragment"
            android:label="@string/overview_label"
            tools:layout="@layout/overview_fragment" />
    <fragment
            android:id="@+id/about_fragment"
            android:name="de.usedup.android.about.AboutFragment"
            android:label="@string/about_label"
            tools:layout="@layout/about_fragment" />
    <action
            android:id="@+id/action_global_about_fragment"
            app:destination="@id/about_fragment" />
    <fragment
            android:id="@+id/shopping_list_preview_fragment"
            android:name="de.usedup.android.shopping.preview.ShoppingListPreviewFragment"
            android:label="@string/preview_label">
        <action
                android:id="@+id/action_shopping_list_preview_fragment_to_shopping_list_fragment"
                app:destination="@id/shopping_list_fragment" />
    </fragment>
    <navigation
            android:id="@+id/management"
            android:label="@string/management_label"
            app:startDestination="@id/management_fragment">
        <navigation
                android:id="@+id/meal"
                android:label="Meal"
                app:startDestination="@id/meal_editor_fragment">
            <fragment
                    android:id="@+id/camera_fragment"
                    android:name="de.usedup.android.camera.CameraFragment"
                    android:label="Camera"
                    tools:layout="@layout/camera_fragment" />
            <fragment
                    android:id="@+id/meal_editor_fragment"
                    android:name="de.usedup.android.management.meals.MealEditorFragment"
                    android:label="@string/edit_meal_label">
                <action
                        android:id="@+id/action_meal_editor_fragment_to_camera_fragment"
                        app:destination="@id/camera_fragment" />
                <argument
                        android:name="mealId"
                        app:argType="de.usedup.android.datamodel.api.objects.Id"
                        app:nullable="true" />
            </fragment>
        </navigation>
        <fragment
                android:id="@+id/product_editor_fragment"
                android:name="de.usedup.android.management.products.ProductEditorFragment"
                android:label="@string/edit_product_label">
            <argument
                    android:name="productId"
                    app:argType="de.usedup.android.datamodel.api.objects.Id"
                    app:nullable="true" />
        </fragment>
        <fragment
                android:id="@+id/template_editor_fragment"
                android:name="de.usedup.android.management.templates.TemplateEditorFragment"
                android:label="@string/edit_template_label">
            <argument
                    android:name="templateId"
                    app:argType="de.usedup.android.datamodel.api.objects.Id"
                    app:nullable="true" />
        </fragment>
        <fragment
                android:id="@+id/management_fragment"
                android:name="de.usedup.android.management.ManagementFragment"
                android:label="@string/management_label"
                tools:layout="@layout/management_fragment">
            <action
                    android:id="@+id/action_management_fragment_to_product_editor_fragment"
                    app:destination="@id/product_editor_fragment" />
            <action
                    android:id="@+id/action_management_fragment_to_template_editor_fragment"
                    app:destination="@id/template_editor_fragment" />
            <action
                    android:id="@+id/action_management_fragment_to_meal_editor_fragment"
                    app:destination="@id/meal" />
        </fragment>
    </navigation>
    <action
            android:id="@+id/action_global_management"
            app:destination="@id/management" />
    <action
            android:id="@+id/action_global_shopping_fragment"
            app:destination="@id/shopping_list_preview_fragment" />
    <fragment
            android:id="@+id/settings_fragment"
            android:name="de.usedup.android.settings.UsedupSettingsFragment"
            android:label="@string/settings_label" />
    <action
            android:id="@+id/action_global_settings_fragment"
            app:destination="@id/settings_fragment" />
    <fragment
            android:id="@+id/planner_fragment"
            android:name="de.usedup.android.planner.PlannerFragment"
            android:label="@string/planning_label">
        <action
                android:id="@+id/action_planner_fragment_to_meal_details_fragment"
                app:destination="@id/meal_details_fragment" />
        <action
                android:id="@+id/action_planner_fragment_to_planner_item_selection_fragment"
                app:destination="@id/planner_item_selection_fragment" />
    </fragment>
    <action
            android:id="@+id/action_global_planner_fragment"
            app:destination="@id/planner_fragment" />
    <fragment
            android:id="@+id/meal_details_fragment"
            android:name="de.usedup.android.mealdetails.MealDetailsFragment"
            android:label="@string/meal_label">
        <argument
                android:name="mealId"
                app:argType="de.usedup.android.datamodel.api.objects.Id" />
    </fragment>
    <fragment
            android:id="@+id/planner_item_selection_fragment"
            android:name="de.usedup.android.planner.selection.PlannerItemSelectionFragment"
            android:label="@string/select_meal_label"
            tools:layout="@layout/planner_item_selection_fragment">
        <argument
                android:name="date"
                app:argType="long" />
        <argument
                android:name="plannerItemId"
                android:defaultValue="@null"
                app:argType="de.usedup.android.datamodel.api.objects.Id"
                app:nullable="true" />
    </fragment>
    <fragment
            android:id="@+id/shopping_list_fragment"
            android:name="de.usedup.android.shopping.list.ShoppingFragment"
            android:label="@string/shopping_list_label"
            tools:layout="@layout/shopping_fragment">
        <argument
                android:name="shoppingList"
                app:argType="de.usedup.android.datamodel.api.objects.Id" />
        <argument
                android:name="shoppingCart"
                app:argType="de.usedup.android.shopping.data.ShoppingCart"
                app:nullable="true" />
    </fragment>
    <action
            android:id="@+id/action_global_overview_fragment"
            app:destination="@id/overview_fragment" />
    <fragment
            android:id="@+id/household_fragment"
            android:name="de.usedup.android.household.HouseholdFragment"
            android:label="@string/household_label"
            tools:layout="@layout/household_fragment" /><action android:id="@+id/action_global_household_fragment" app:destination="@id/household_fragment"/>
</navigation>